tests/ui/wait-for-css-false.goml
// This test ensures that the `wait-for-css-false` command is behaving like expected.
go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"
set-timeout: 300
// Shouldn't wait here since it's already not the case.
wait-for-css-false: ("#js-call", {"margin-top": "1px"})
click: "#js-call"
// Should wait for 250ms here.
wait-for-css-false: ("#js-call", {"margin-top": "0px"})
assert-css: ("#js-create-elem", {"border-color": "rgb(1, 1, 1)"})
assert-css: ("#js-create-elem", {"border-color": "#010101"})
move-cursor-to: "#js-create-elem"
// It should re-compute the css until it finally matches.
wait-for-css-false: ("#js-create-elem", {"border-color": "#010101"})
wait-for-css-false: ("#js-create-elem", {"border-color": "rgb(1, 1, 1)"})
click: "#js-create-elem"
// Should wait for 100 here (the element is created first).
wait-for-css-false: ("#created-one", {"height": "21px"})
wait-for-css-false: ("#js-call", {"margin-top": "12px"})
//~^ ERROR: All CSS properties still match
// Check that the script won't run anything after the previous command failed.
assert-css: ("#js-call", {"margin-top": "12px"})
